# cpp-doctest-example

./: CMakeLists.txt  README.md  main.cpp
